# modern-cpp-template

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  vcpkg.json
cmake/: CompilerWarnings.cmake  HeaderConfig.cmake  Settings.cmake  StaticAnalyzers.cmake  Utils.cmake
lib/: CMakeLists.txt
src/: CMakeLists.txt
